@@ -1,7 +1,8 @@
-#!/usr/bin/python -B
+#!/usr/bin/python2 -B
 # -*- coding: utf-8 -*-
 
 # Test AEL TheGamesDB asset scraper.
+# Super Mario World for SNES have titlescreen https://thegamesdb.net/game.php?id=136
 
 # --- Python standard library ---
 from __future__ import unicode_literals
@@ -30,9 +31,9 @@ status_dic = kodi_new_status_dic('Scraper test was OK')
 
 # --- Choose data for testing ---
 # search_term, rombase, platform = common.games['metroid']
-# search_term, rombase, platform = common.games['mworld']
-#search_term, rombase, platform = common.games['sonic_megaDrive']
-search_term, rombase, platform = common.games['sonic_genesis'] # Aliased platform
+search_term, rombase, platform = common.games['mworld']
+# search_term, rombase, platform = common.games['sonic_megadrive']
+# search_term, rombase, platform = common.games['sonic_genesis'] # Aliased platform
 # search_term, rombase, platform = common.games['chakan']
 # search_term, rombase, platform = common.games['console_wrong_title']
 # search_term, rombase, platform = common.games['console_wrong_platform']
@@ -61,6 +62,7 @@ print('*** Fetching game assets ************************************************
 print_game_assets(scraper_obj.get_assets(ASSET_FANART_ID, status_dic))
 print_game_assets(scraper_obj.get_assets(ASSET_BANNER_ID, status_dic))
 print_game_assets(scraper_obj.get_assets(ASSET_CLEARLOGO_ID, status_dic))
+print_game_assets(scraper_obj.get_assets(ASSET_TITLE_ID, status_dic))
 print_game_assets(scraper_obj.get_assets(ASSET_SNAP_ID, status_dic))
 print_game_assets(scraper_obj.get_assets(ASSET_BOXFRONT_ID, status_dic))
 print_game_assets(scraper_obj.get_assets(ASSET_BOXBACK_ID, status_dic))
